# hello_opencv

./: 2_1.cpp  2_10.cpp  2_11.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp  2_7.cpp  2_8.cpp  2_9.cpp  CMakeLists.txt  README.md  chapter_3.cpp  chapter_4.cpp  example2_10.cpp  example2_11.cpp  example2_5.cpp  example2_6.cpp  example2_7.cpp  example2_9.cpp  header.hpp  ipcam.cpp  lkdemo.cpp  main.cpp  youtube_dft.cpp  youtube_rtp.cpp
